dnl $Id$

define([extraquote],[[[$1]]])
define([defnsubst],[define([$1],patsubst(extraquote(defn([$1])),[$2],[$3])))])
defnsubst([AC_INIT_PARSE_ARGS], ['${prefix}/var'], ['/var'])
defnsubst([AC_INIT_PARSE_ARGS], [PREFIX/var], [/var])

AC_INIT(u6rd.8.in)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.
AC_CHECK_HEADER(net/if_tun.h, [P_SRCS="$P_SRCS tun_bsd.c"],
 [AC_CHECK_HEADER(net/if_utun.h, [P_SRCS="$P_SRCS tun_darwin.c"],
 [AC_MSG_ERROR([No supported tunneling device.])])])

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_REPLACE_FUNCS(getprogname)

dnl Package options
if test x"$GCC" = xyes; then
	CFLAGS="$CFLAGS -Wall -W"
fi

AC_SUBST(P_SRCS)
AC_OUTPUT(Makefile)
